OverFlow bug remove from small and medium devices

--- a/style.css
+++ b/style.css
@@ -23,6 +23,7 @@
 
     body {
       background-color: #00695c;
+      overflow: hidden;
     }
     #playAgain-btn{
       display: none;
